janet-lsp-plus/src/lsp/diagnostics/snapshots/janet_lsp_plus__lsp__diagnostics__tests__highlights_the_unknown_symbol.snap
---
source: src/lsp/diagnostics/tests.rs
expression: "(defn f [x]\n  (undefined-thing x))\n"
---
----- PROBLEM
2:3 unknown symbol undefined-thing

----- HIGHLIGHT
(defn f [x]
  (undefined-thing x))
   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
